<resources>
    <string name="app_name">Caller Notse</string>
    <string name="title_activity_add">Add New Caller Notes</string>
    <string name="title_activity_contact">Select Contact</string>
    <string name="item_name">Phone Number</string>
    <string name="person_name">Please add caller note here....</string>
    <string name="set_date">Set Date</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="menu_title_new_group">New group</string>
    <string name="menu_title_new_broadcast">New broadcast</string>
    <string name="menu_title_starred_messages">Starred messages</string>
    <string name="menu_title_status">Status</string>

    <string name="activity">Hello Nehal</string>


    <string name="chathead_content_title">Demo Chat: Active</string>
    <string name="content_text">Demo running.</string>
    <string name="mail_content_title">Demo Customize: active</string>
    <string name="chathead_click_message">Click</string>
    <string name="delete_demo">Delete Demo</string>
    <string name="show_demo">Show Simple FloatingView</string>
    <string name="show_customized_demo">Show Customized FloatingView</string>
    <string name="show_settings">Initial Settings</string>
    <string name="permission_denied">Overlay permission not granted.</string>
    <string name="mail_address">example@example.com</string>
    <string name="mail_title">Title</string>
    <string name="mail_content">Message</string>
    <string name="touch_finished_position" formatted="false">Current position (%d,%d)</string>
    <string name="deleted_soon">FloatingView will be deleted soon.</string>
    <string name="finish_deleted">FloatingView has been deleted.</string>
    <string name="default_floatingview_channel_id">default_floatingview_channel</string>
    <string name="default_floatingview_channel_name">Default Channel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Call Logs</string>
    <string name="add">Insert Call Log</string>

    <string name="all">All</string>
    <string name="createnote">Create note</string>
    <string name="closedrawer">Close drawer</string>
    <string name="favorites">Favorites</string>
    <string name="notes">Notes</string>
    <string name="opendrawer">Open drawer</string>
    <string name="photo">Photo</string>
    <string name="recording">Recording</string>
    <string name="refresh">Refresh</string>
    <string name="reminder">Reminder</string>
    <string name="search">Search</string>
    <string name="shared">Shared</string>
    <string name="sheet_item_pressed">Item pressed</string>
    <string name="snackbar_shared_msg">Gordon Wong shared a note with you.</string>
    <string name="view">View</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_demo">DemoActivity</string>


    <string name="pick_contacts">Pick contact(s)</string>
    <string name="picked_contacts">Picked contact(s)</string>


    <string name="permission_denied_contacts">The contact picker won\'t work without this permission. Are you sure you want to deny this permission?</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_retry">Re-try</string>

    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>

    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

