<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <View
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_actionbar_background_view_height"
        android:background="@color/primary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetStart="0dp"
        style="@style/Toolbar">

        <com.bluerocket.callernotse.widget.CanaroTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity"
            android:textColor="@color/white"
            android:textSize="@dimen/guillotine_item_text_size" />
    </android.support.v7.widget.Toolbar>


    <include layout="@layout/content_main" />
    </LinearLayout>

    <!-- Your FAB implementation -->
    <com.bluerocket.callernotse.widget.Fab
        android:id="@+id/fab"
        style="@style/Widget.MaterialSheetFab.Fab"

        android:layout_gravity="end|bottom" />

    <!-- Overlay that dims the screen -->
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->
        <android.support.v7.widget.CardView
            android:id="@+id/fab_sheet"
            style="@style/Widget.MaterialSheetFab.Sheet">

            <!-- Sheet items -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Recording -->
                <TextView
                    android:id="@+id/fab_sheet_item_recording"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_mic_grey600_24dp"
                    android:drawableStart="@drawable/ic_mic_grey600_24dp"
                    android:text="@string/recording" />

                <!-- Reminder -->
                <TextView
                    android:id="@+id/fab_sheet_item_reminder"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_access_alarms_grey600_24dp"
                    android:drawableStart="@drawable/ic_access_alarms_grey600_24dp"
                    android:text="@string/reminder" />

                <!-- Photo -->
                <TextView
                    android:id="@+id/fab_sheet_item_photo"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_photo_camera_grey600_24dp"
                    android:drawableStart="@drawable/ic_photo_camera_grey600_24dp"
                    android:text="@string/photo" />

                <!-- Note -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_accent">

                    <TextView
                        android:id="@+id/fab_sheet_item_note"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_create_grey600_24dp"
                        android:drawableStart="@drawable/ic_create_grey600_24dp"
                        android:text="@string/createnote" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </io.codetail.widget.RevealLinearLayout>

    <com.ashokvarma.bottomnavigation.BottomNavigationBar
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />
    <!--app:bnbAutoHideEnabled="false"/>-->


</android.support.design.widget.CoordinatorLayout>
